monitoring/grafana.yaml
# This is not a recommended configuration, and further support should be available
# from the Prometheus and Grafana communities.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      name: grafana
  template:
    metadata:
      labels:
        name: grafana
    spec:
      containers:
      - name: grafana
        image: strimzilab/grafana-openshift:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: grafana
          containerPort: 3000
          protocol: TCP
        volumeMounts:
        - name: grafana-data
          mountPath: /var/lib/grafana
        - name: grafana-logs
          mountPath: /var/log/grafana
        - name: grafana-config
          mountPath: /usr/share/grafana/conf/provisioning/datasources/datasource.yaml
          readOnly: true
          subPath: datasource.yaml
        - name: grafana-config
          mountPath: /usr/share/grafana/conf/provisioning/dashboards/grafana-dashboard-provider.yaml
          readOnly: true
          subPath: grafana-dashboard-provider.yaml
        - name: grafana-config
          mountPath: /var/lib/grafana/dashboards/interconnect-dashboard.json
          readOnly: true
          subPath: interconnect-dashboard.json
        - name: grafana-config
          mountPath: /var/lib/grafana/dashboards/interconnect-dashboard-delayed.json
          readOnly: true
          subPath: interconnect-dashboard-delayed.json
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            cpu: "1"
            memory: 512Mi
          limits:
            cpu: "1"
            memory: 512Mi
      volumes:
      - name: grafana-data
        emptyDir: {}
      - name: grafana-logs
        emptyDir: {}
      - name: grafana-config
        configMap:
          name: grafana-config
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  ports:
  - name: grafana
    port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    name: grafana
  type: ClusterIP
