monitoring/route-alertmanager.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: alertmanager
spec:
  port:
    targetPort: alertmanager
  to:
    kind: Service
    name: alertmanager
    weight: 100
  wildcardPolicy: None
